--- a/MyBasicMavenTest/test-output/emailable-report.html
+++ b/MyBasicMavenTest/test-output/emailable-report.html
@@ -31,31 +31,47 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">0.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Default test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">259.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Default test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">com.my.basic.test.ThisIsTest</td><td><a href="#m1"><b>browserTest</b>  </a></td><td class="numi">1</td><td>1481146574717</td><td class="numi">256</td></tr>
+<tr class="failedodd"><td rowspan="1">com.my.basic.test.DA_Disable_user_Reactivate</td><td><a href="#m1"><b>ReActivatingUser</b>  </a></td><td class="numi">1</td><td>1481179976572</td><td class="numi">79381</td></tr>
 <tr><th colspan="4">Default test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">com.my.basic.test.ThisIsTest</td><td><a href="#m2"><b>test2</b>  </a></td><td class="numi">1</td><td>1481146574979</td><td class="numi">4</td></tr>
+<tr class="passedodd"><td rowspan="1">com.my.basic.test.DA_Disable_user_Reactivate</td><td><a href="#m2"><b>InActivatingUser</b>  </a></td><td class="numi">1</td><td>1481179861335</td><td class="numi">102954</td></tr>
 </table>
 <h1>Default test</h1>
-<h2 id="m1">com.my.basic.test.ThisIsTest:browserTest</h2>
+<h2 id="m1">com.my.basic.test.DA_Disable_user_Reactivate:ReActivatingUser</h2>
 <div style="padding-left:3em">
-<p>The driver is not executable: /Users/sakoar/Documents/workspace/MyBasicMavenTest/drivers/chromedriver</p>
-com.google.common.base.Preconditions.checkState(Preconditions.java:199)
-<br/>at org.openqa.selenium.remote.service.DriverService.checkExecutable(DriverService.java:125)
-<br/>at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:116)
-<br/>at org.openqa.selenium.chrome.ChromeDriverService.access$000(ChromeDriverService.java:32)
-<br/>at org.openqa.selenium.chrome.ChromeDriverService$Builder.findDefaultExecutable(ChromeDriverService.java:137)
-<br/>at org.openqa.selenium.remote.service.DriverService$Builder.build(DriverService.java:296)
-<br/>at org.openqa.selenium.chrome.ChromeDriverService.createDefaultService(ChromeDriverService.java:88)
-<br/>at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:116)
-<br/>at com.my.basic.test.ThisIsTest.browserTest(ThisIsTest.java:20)
+<p>Element is not currently visible and so may not be interacted with
+Command duration or timeout: 50.05 seconds
+Build info: version: &apos;2.53.1&apos;, revision: &apos;a36b8b1cd5757287168e54b817830adce9b0158d&apos;, time: &apos;2016-06-30 19:26:09&apos;
+System info: host: &apos;D-184004960&apos;, ip: &apos;10.141.27.178&apos;, os.name: &apos;Windows 8.1&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.3&apos;, java.version: &apos;1.8.0_91&apos;
+Driver info: org.openqa.selenium.firefox.FirefoxDriver
+Capabilities [{applicationCacheEnabled=true, rotatable=false, handlesAlerts=true, databaseEnabled=true, version=44.0, platform=WINDOWS, nativeEvents=false, acceptSslCerts=true, webStorageEnabled=true, locationContextEnabled=true, browserName=firefox, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true}]
+Session ID: bafe2c06-afa8-4e93-82fe-81adb89b054a</p>
+sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
+<br/>at sun.reflect.NativeConstructorAccessorImpl.newInstance(Unknown Source)
+<br/>at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(Unknown Source)
+<br/>at java.lang.reflect.Constructor.newInstance(Unknown Source)
+<br/>at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:206)
+<br/>at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:158)
+<br/>at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:678)
+<br/>at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:327)
+<br/>at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:85)
+<br/>at com.my.basic.test.DA_Disable_user_Reactivate.ReActivatingUser(DA_Disable_user_Reactivate.java:169)
 <br/>25 lines not shown
+<p>Caused by Element is not currently visible and so may not be interacted with
+Build info: version: &apos;2.53.1&apos;, revision: &apos;a36b8b1cd5757287168e54b817830adce9b0158d&apos;, time: &apos;2016-06-30 19:26:09&apos;
+System info: host: &apos;D-184004960&apos;, ip: &apos;10.141.27.178&apos;, os.name: &apos;Windows 8.1&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.3&apos;, java.version: &apos;1.8.0_91&apos;
+Driver info: driver.version: unknown</p>
+&lt;anonymous class&gt;.fxdriver.preconditions.visible(file:///C:/Users/sanoaoa/AppData/Local/Temp/anonymous7943447231122882585webdriver-profile/extensions/fxdriver@googlecode.com/components/command-processor.js:10092)
+<br/>at &lt;anonymous class&gt;.DelayedCommand.prototype.checkPreconditions_(file:///C:/Users/sanoaoa/AppData/Local/Temp/anonymous7943447231122882585webdriver-profile/extensions/fxdriver@googlecode.com/components/command-processor.js:12644)
+<br/>at &lt;anonymous class&gt;.DelayedCommand.prototype.executeInternal_/h(file:///C:/Users/sanoaoa/AppData/Local/Temp/anonymous7943447231122882585webdriver-profile/extensions/fxdriver@googlecode.com/components/command-processor.js:12661)
+<br/>at &lt;anonymous class&gt;.fxdriver.Timer.prototype.setTimeout/&lt;.notify(file:///C:/Users/sanoaoa/AppData/Local/Temp/anonymous7943447231122882585webdriver-profile/extensions/fxdriver@googlecode.com/components/command-processor.js:625)
+<br/>1 lines not shown
 </div>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.my.basic.test.ThisIsTest:test2</h2>
+<h2 id="m2">com.my.basic.test.DA_Disable_user_Reactivate:InActivatingUser</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
