--- a/MyBasicMavenTest/test-output/old/Default suite/classes.html
+++ b/MyBasicMavenTest/test-output/old/Default suite/classes.html
@@ -4,25 +4,33 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.my.basic.test.ThisIsTest</td>
+<td>com.my.basic.test.DA_Disable_user_Reactivate</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>browserTest</td>
+<td>ReActivatingUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>test2</td>
+<td>InActivatingUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>launch</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
