--- a/MyBasicMavenTest/test-output/old/Default suite/methods-alphabetical.html
+++ b/MyBasicMavenTest/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bcd69c">  <td>16/12/08 03:06:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThisIsTest.browserTest()[pri:0, instance:com.my.basic.test.ThisIsTest@3e572b61]">browserTest</td> 
-  <td>main@1593266117</td>   <td></td> </tr>
-<tr bgcolor="bcd69c">  <td>16/12/08 03:06:14</td>   <td>262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThisIsTest.test2()[pri:0, instance:com.my.basic.test.ThisIsTest@3e572b61]">test2</td> 
-  <td>main@1593266117</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>16/12/08 12:21:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DA_Disable_user_Reactivate.InActivatingUser()[pri:0, instance:com.my.basic.test.DA_Disable_user_Reactivate@8bd1b6a]">InActivatingUser</td> 
+  <td>main@1501587365</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>16/12/08 12:22:56</td>   <td>115237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DA_Disable_user_Reactivate.ReActivatingUser()[pri:0, instance:com.my.basic.test.DA_Disable_user_Reactivate@8bd1b6a]">ReActivatingUser</td> 
+  <td>main@1501587365</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>16/12/08 12:20:05</td>   <td>-56006</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DA_Disable_user_Reactivate.launch()[pri:0, instance:com.my.basic.test.DA_Disable_user_Reactivate@8bd1b6a]">&gt;&gt;launch</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1501587365</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>16/12/08 12:24:15</td>   <td>194633</td> <td>&nbsp;</td><td title="&lt;&lt;DA_Disable_user_Reactivate.logout()[pri:0, instance:com.my.basic.test.DA_Disable_user_Reactivate@8bd1b6a]">&lt;&lt;logout</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1501587365</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>16/12/08 12:20:21</td>   <td>-40304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DA_Disable_user_Reactivate.setUp()[pri:0, instance:com.my.basic.test.DA_Disable_user_Reactivate@8bd1b6a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1501587365</td>   <td></td> </tr>
+<tr bgcolor="7996a0">  <td>16/12/08 12:22:44</td>   <td>102967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DA_Disable_user_Reactivate.setUp()[pri:0, instance:com.my.basic.test.DA_Disable_user_Reactivate@8bd1b6a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1501587365</td>   <td></td> </tr>
 </table>
